# text-to-sql-ecommerce

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
data/database/: schema.sql
data/results/: baseline_results.json  correction_results.json  fewshot_results.json  improved_results.json  test_questions.json
notebooks/: 01_data_setup.ipynb  02_baseline_llm.ipynb  03_schema_rag.ipynb  04_few_shot.ipynb  05_self_correction.ipynb
src/api/: app.py
src/config/: settings.py
src/evaluation/: metrics.py
src/sql/: executor.py  generator.py
tests/: conftest.py  test_api.py  test_config.py  test_executor.py  test_executor_extended.py  test_generator.py  test_generator_extended.py  test_metrics.py  test_metrics_extended.py
